# vibetap-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
.vibetap/: last-suggestions.json
crates/vibetap-cli/: Cargo.toml
crates/vibetap-cli/src/: main.rs
crates/vibetap-cli/src/commands/: apply.rs  auth.rs  generate.rs  hook.rs  hush.rs  init.rs  mod.rs  now.rs  revert.rs  run.rs  scan.rs  stats.rs  watch.rs
crates/vibetap-core/: Cargo.toml
crates/vibetap-core/src/: api.rs  config.rs  lib.rs
crates/vibetap-git/: Cargo.toml
crates/vibetap-git/src/: lib.rs
