[workspace]
resolver = "2"
members = [
    "crates/vibetap-cli",
    "crates/vibetap-core",
    "crates/vibetap-git",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/devtunehq/vibetap-cli"
authors = ["DevTune HQ"]

[workspace.dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.41", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Git
git2 = "0.19"

# File watching
notify = "7.0"
notify-debouncer-mini = "0.5"

# File system
walkdir = "2.5"

# Config
toml = "0.8"
dirs = "5.0"

# Crypto
sha2 = "0.10"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Terminal UI
colored = "3.0"
indicatif = "0.17"
syntect = "5.2"

# Browser
webbrowser = "1.0"

# Random
rand = "0.9"

# Internal crates
vibetap-core = { path = "crates/vibetap-core" }
vibetap-git = { path = "crates/vibetap-git" }
