[package]
name = "vibetap"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "AI-powered test generation from code changes"

[[bin]]
name = "vibetap"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
colored.workspace = true
indicatif.workspace = true
dirs.workspace = true

vibetap-core.workspace = true
vibetap-git.workspace = true
