[package]
name = "vibetap-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
sha2.workspace = true
toml.workspace = true
dirs.workspace = true
tracing.workspace = true
